English：添加例句数量佐证、顺序浏览方法

--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -104,13 +104,13 @@
 
 用惯了市面上其他查词软件的同学可能会觉得有点过于简洁？哈哈，这正是这个软件的一大特点。
 
-界面的上方就是查询栏了，你可以在这里用键盘输入单词并敲回车，它会为你展示结果：
+界面的上方就是**查询栏**了，你可以在这里用键盘输入单词并敲回车，它会为你展示结果：
 
 ![mdict_word_cool](../images/mdict_word_cool.png)
 
 可以发现这里面的界面元素还是比较丰富的，这得益于我们导入的词典文件中包含格式和风格的限定文件。你可以单击发音、展开折叠内容，并使用鼠标滚轮上下流畅地滑动…… 是不是感觉和桌面软件没什么区别了，甚至界面还要好看数倍？这就是 麟卓卓懿虚拟环境 的力量……
 
-软件支持点击界面中的词汇直接弹出查询窗口：
+软件支持**点击界面中的词汇直接弹出查询窗口**：
 
 ![mdict_word_cool](../images/mdict_multi_windows.png)
 
@@ -118,13 +118,32 @@
 
 下方有返回和前进的按钮，这个和浏览器对应的按钮功能类似，可以让你遍历查询的词汇，返回到你想要的位置。
 
-你还可以通过 `History` 页面，回顾你查词的历史记录：
+你还可以通过 `History` 页面，回顾你**查词的历史记录**：
 
 ![mdict_word_cool](../images/mdict_history.png)
 
 目前主要就是这几种用法。可以说这个软件最大的优点是将数据来源交给其他方面的开发者，这使得我们可以获得一些特殊的优质资源，使用这个软件也是为了使用它所依赖的词典数据。所以我们大可不必在乎界面和功能的简陋，只需要在乎我们拿到的词典数据优不优良就行了。
 
-目前来看，我拿到的这个词典数据似乎比纸质词典的内容要多一些？在某些例句的举例上，电子版似乎更为丰富。另外，你至少不用在需要快速查词时再去翻那本厚词典了，只要在需要勾画内容时、或者顺序学习词汇时再拿起它来就行了；无论在操作和视觉感受上、还是在词条数据的权威性上，它都要比网易有道词典更胜一筹。
+目前来看，我拿到的这个词典数据似乎比纸质词典的内容要多一些？在某些例句的举例上，电子版似乎更为丰富。例如，对于单词 `individuality`，你在网易有道词典和第十版纸质词典上只能查到 1 条例句：
+
+> She expresses her individuality through her clothes. <br>
+> 她通过穿着表现个性。
+
+但是，在这个电子版词典中，你可以**获得 8 条例句，并且获得词源信息**：
+
+![mdict_word_individuality](../images/mdict_word_individuality.png)
+
+你还可以轻而易举地**复制词条的内容**到剪切板上：
+
+![mdict_copy](../images/mdict_copy.png)
+
+并且，这款软件也支持你**顺序地浏览**这本词典，只需要你从左侧依次选择即可：
+
+![mdict_seq](../images/mdict_seq.png)
+
+（这搞得我现在都有点后悔买纸质书了？🤣）
+
+另外，你至少不用在需要快速查词时再去翻那本厚词典了，只要在需要勾画内容时、或者顺序学习词汇时再拿起它来就行了；无论在操作和视觉感受上、还是在词条数据的权威性上，它都要比网易有道词典更胜一筹。
 
 这是个比较冷门的软件，我周围似乎并没有人在用。写这篇随笔除了记录一下流程，也是为了支持一下这款优秀的软件，希望它能继续做下去。
 
