--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -141,7 +141,7 @@
 
 ![mdict_seq](../images/mdict_seq.png)
 
-（这搞得我现在都有点后悔买纸质书了？🤣）
+（这搞得我现在都有点后悔买正版纸质书了？🤣 不过纸质书有质量很高的彩页部分，以及前言使用指导部分，这些词典软件里都没有。最后再怎么说也不能完全白嫖吧……）
 
 另外，你至少不用在需要快速查词时再去翻那本厚词典了，只要在需要勾画内容时、或者顺序学习词汇时再拿起它来就行了；无论在操作和视觉感受上、还是在词条数据的权威性上，它都要比网易有道词典更胜一筹。
 
