English：添加关于页面快进按钮的提示

--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -108,7 +108,7 @@
 
 ![mdict_word_cool](../images/mdict_word_cool.png)
 
-可以发现这里面的界面元素还是比较丰富的，这得益于我们导入的词典文件中包含格式和风格的限定文件。你可以单击发音、展开折叠内容，并使用鼠标滚轮上下流畅地滑动…… 是不是感觉和桌面软件没什么区别了，甚至界面还要好看数倍？这就是 麟卓卓懿虚拟环境 的力量……
+可以发现这里面的界面元素还是比较丰富的，这得益于我们导入的词典文件中包含格式和风格的限定文件。你可以单击发音、展开折叠内容，并使用鼠标滚轮上下流畅地滑动，或者是点击窗口右下方的控制按钮执行页面快进操作…… 是不是感觉和桌面软件没什么区别了，甚至界面还要好看数倍？这就是 麟卓卓懿虚拟环境 的力量……（笑
 
 软件支持**点击界面中的词汇直接弹出查询窗口**：
 
