English：增加 词典的下载链接指引

--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -155,3 +155,7 @@
 
 ![mdict_pics_zoomin](../images/mdict_pics_zoomin.png)
 
+另外这里提供一个 [简书的链接](https://www.jianshu.com/p/e279d4a979fa)，里面有更多本词典的网盘下载链接。下载后，就像上面一样，将词典文件复制到 `doc` 路径下，重启软件就可以用了，查词时软件会帮你**同时在所有词典中进行查询**。
+
+![english_mdict_multi_dicts](../images/english_mdict_multi_dicts.png)
+
