English：添加 例句翻译警示

--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -159,3 +159,11 @@
 
 ![english_mdict_multi_dicts](../images/english_mdict_multi_dicts.png)
 
+我使用的牛津高阶电子版中的一些附加例句的翻译是不正确的，例如这句：
+
+> He has very lowbrow tastes.
+>
+> 他的眉毛很低。
+
+使用时注意一下就好了，一般很容易就可以识别出来，瑕不掩瑜。
+
