--- a/Inspirations/人性的优点-书摘.md
+++ b/Inspirations/人性的优点-书摘.md
@@ -52,3 +52,51 @@
 
 我应当从什么时候开始实践“活在完全独立的今天”的诺言？下周，明天，还是今天？
 
+### 1-2消除忧虑的万能公式
+
+……有一天，我开始清醒地意识到，忧虑不可能解决我的这些问题。于是我决定不再忧虑，而是去寻找解决问题的方法……这个方法非常简单，它只有三个步骤：第一，心态平和地面对发生事故的整个过程，想想它最坏的后果是什么？第二，在做出最糟糕的预测后，剩下的事情就是勇敢地接受它。第三，集中精力和所掌控的时间，努力改变那最糟糕的结果。……如果当时我一直深陷于忧虑之中，不但无助于解决这个问题，还会摧毁我的精神，对我来说这是最大的危害。一个人一旦换上忧虑症，思绪就会混乱，接下来就会丧失判断力。我们一旦敢于直视最坏的情况并且勇敢面对它、接受它，就会柳暗花明。把所有可能发生的状况逐一剖析，反而能集中精力解决问题了。
+
+……它的巨大价值在于它把我们从那漫无边际的烦恼和忧虑中拉回到现实中来，让我们走出了忧虑的阴影，找到了自己应该站的位置和现在的处境。它让我们更加理智，并且能够全神贯注地解决问题。
+
+要乐于接受那些可能的结果，因为接受现实是克服以后所有不幸与苦难的第一步。
+
+从心理学的角度来讲，心里的宁静来自能够面对最坏的情况，因为它能挖掘出人的最大的潜能。
+
+一旦我们接受了最坏的结果，也就不用担心再失去什么了，这也就意味着有些东西即便失去了，也还有希望挽救回来。
+
+……不去重新认识自己，不去重新构建自我，而是沉浸在过去的悔恨之中，内心的痛苦折磨着他们，最后让他们成为了忧郁症患者。
+
+啊！珍惜、享受眼前的时光吧，在我们化为泥土之前。黄泉之下，寂寞的泥土下，将再无酒、再无乐，也再无歌者，只有永恒的沉默。
+
+……旅途中，我们在太平洋遭遇了台风，在印度洋遇到过狂暴的季风。要是我还处在忧虑之中的话，单是恐惧，就可以让我进了棺材。但是，现在这些事情却让我感到很兴奋。
+
+如果你遇到了让你忧虑的事情，难以摆脱，就应该用卡瑞尔的万能公式做下面的这三件事：1、问你自己，可能发生的最坏的情况是什么？2、如果不得不如此，你就做好准备迎接它。3、保持内心的平静，然后竭力想出办法来改善这个最坏的情况。
+
+### 1-3忧虑是健康的敌人
+
+……每十个人里就会有一个因为压力太大而精神崩溃，主要原因就是忧虑。
+
+不会应对忧虑的商人容易英年早逝。
+
+在找医生看病的病人中，有70%的病人只要能解除自己内心的恐惧和忧虑，他们的疾病就都会消失的。不要误会，我不是说他们的病是自己想象出来的，恰好相反，实际上，他们的病像蛀牙一样存在着，有时甚至比牙痛还要严重上千倍。……恐惧使人忧虑，忧虑使人紧张，从而会影响到人的胃部神经，胃液就会因此分泌紊乱，长久下去，就会引起胃溃疡。
+
+……他研究了176位工商界平均年龄在44岁左右的企业高管，大约有三分之一的人由于生活过度紧张而受到了心脏病、胃溃疡或者高血压三大疾病的困扰。……成功的代价何其昂贵呀！一个患有胃溃疡或心脏病的成功人士，还算是成功人士吗？就算他赢得了全世界，却损失了自己的身体健康，而获得的一切，对他来讲，又有什么意义呢？即便拥有了全世界，睡觉时每天也只能睡一张床，每天也只能吃三顿饭。这一点，就是一个挖水沟的人都做得到，甚至会比那些所谓的成功人士吃的更饱、睡得更香！说实话，如果事业的成功需要以身体的健康作为代价，我情愿在亚拉巴马州做一个休息时弹五弦琴唱歌的农夫，也不愿意到45岁就以损害健康换来一家铁路或者香烟公司的高管。……在我看来，这个身价百万的富翁，还不及我父亲的一半成功。而我父亲不过是密苏里州的农夫。他虽身无分文，却过着快乐的生活，直到89岁去世。
+
+柏拉图说过：“医生所犯的最大的错误在于，他们只想治疗生理的疾病，而不关心他们精神的疾病。其实，精神和肉体是一体的，是完全不可以分开的。”
+
+焦虑和烦躁的人多半没有勇气去面对残酷的现实生活，而是退缩到自己的一个小小的幻想世界里，来舒缓自己的紧张情绪。
+
+忧虑甚至让最坚强不屈的人患病。……我愿意用我的双手为大家服务，但是却不想让日常工作夺去我的身心健康。
+
+让你身心愉悦的最有效方法：对自己充满信心；睡得安稳；美妙的音乐和欢笑；乐观的态度；健康和快乐将会属于你。
+
+……这是一件令人震惊和难以之心的事实：每年死于自杀的美国人，比死于最常见的五大疾病的人还多。
+
+在现在无比紧张的现代都市里生活的人，只有内心平静的人才不会变成神经病。
+
+在现代都市的混乱中，你能否保持自己内心的平静？……我们大多数人远比我们想象的更加坚强。我们的内心有许多未发现的内在的力量。正如梭罗在他的不朽名著《瓦尔登湖》里所描述的那样：我坚信人们能够通过自己的意志力去改变生存境遇，如果一个人能够充满信心地去实现他的理想，下定决心去追求他想过的生活，他将能够取得梦想的成功。
+
+……你怎么啦，你真的一点斗志都没有了吗？你如果还像这样一直哭下去，你会真的死定了。……但事已至此，不如直面现实，不要只顾着担心，应该想想如何应对和改善它。……我并没有傻到认为只要微笑就能治疗癌症，但是我相信心情的乐观有助于抵抗疾病的入侵。
+
+假如你想拥有一个身心健康的人生，那么就让忧虑远离你。
+
