--- a/Inspirations/人性的优点-书摘.md
+++ b/Inspirations/人性的优点-书摘.md
@@ -100,3 +100,25 @@
 
 假如你想拥有一个身心健康的人生，那么就让忧虑远离你。
 
+## 2分析忧虑的方法
+
+……要弄清楚让你忧虑的真正原因，也就是查明让你忧虑的真相，这一步非常关键。
+
+导致忧虑的主要原因就是困惑。人们的忧虑大多数都是在并不清楚真相的时候产生的，还有就是由于自己妄下判断。
+
+猎犬通常都不会在意周围有关的环境，它们往往都只关注眼前的猎物。如果我们不能理智客观地弄清楚事情的真相，那我们就如同猎犬一样。所以，我们就会很轻率地做出判断。
+
+人们通常都愿意相信那些符合个人意愿的事情，而不愿意相信那些不符合自己意愿的事情。这样一来，我们找不到解决问题的方法就十分正常了。
+
+……我知道有两种方法，可以让我们的态度客观理智，能让我们把事实看得更加清楚。……第一种方法，当我们在调查事情的真相的时候，可以看作是在帮助别人搜集资料，这样就可以使我们在看待事物的时候，不受自身情绪的影响，而是保持客观公正的态度。第二种方法，如果一定要在忧虑的时候查明事实真相，我会尝试着站在对方的立场，为对方辩护，换个说法就是，我要把对自己不利的因素弄清楚。虽然这些事情违反了我的初衷，我也不喜欢这样做，但是我还是必须要这么做。之后你就会惊奇地发现，当你把事情的正反两方面因素都记录下来的时候，事情的真相往往就隐藏在两个极端之间。
+
+在事实真相没有客观理智地查明之前，一定不要轻易下结论。……经过长时间的精心研究，我发现把已经查清楚的事实以及所面临的问题记录在纸上，可以更有效地对事情进行分析，帮助我们做出正确的判断。
+
+……经验告诉我，要做出可以解决问题的决定。如果没有做出最终的决定，只是一直在原地打转的话，那就是自己给自己找麻烦，会给自己带来非常糟糕的后果。对我而言，做出了决定，就等于消除了一半的忧虑，下定决心实施后，另外一半的忧虑基本也就消失了。
+
+……第四个步骤——立即实施所做出的决定，是这个方法的关键。查明事实，分析事实，立即行动，要将这三个步骤有效地结合起来才可以。……一旦想好了如何去应对，就要马上行动起来，千万不要犹豫不决。
+
+思考问题要适度，否则会使得自己迷惑、忧虑。有些时候，大量的思考和验证是没有用的。我们不能总是犹豫不决，必须要快速做出决定并且实施决定。
+
+想让忧虑远离自己，不妨试试李奇菲尔德的方法：步骤一，是什么让我感到忧虑？步骤二，面对这样的情况，我应该如何去做？步骤三，要不要行动？步骤四，什么时候开始行动？
+
