--- a/Inspirations/人性的优点-书摘.md
+++ b/Inspirations/人性的优点-书摘.md
@@ -102,6 +102,8 @@
 
 ## 2分析忧虑的方法
 
+### 2-1问自己几个有关忧虑的问题
+
 ……要弄清楚让你忧虑的真正原因，也就是查明让你忧虑的真相，这一步非常关键。
 
 导致忧虑的主要原因就是困惑。人们的忧虑大多数都是在并不清楚真相的时候产生的，还有就是由于自己妄下判断。
@@ -121,4 +123,134 @@
 思考问题要适度，否则会使得自己迷惑、忧虑。有些时候，大量的思考和验证是没有用的。我们不能总是犹豫不决，必须要快速做出决定并且实施决定。
 
 想让忧虑远离自己，不妨试试李奇菲尔德的方法：步骤一，是什么让我感到忧虑？步骤二，面对这样的情况，我应该如何去做？步骤三，要不要行动？步骤四，什么时候开始行动？
+
+### 2-2让你的工作忧虑减半
+
+……过去人们常会围绕一个令人烦恼的问题讨论上一两个小时，却没人具体、确定地知道真正的问题是什么。我们总是在连问题是什么都没搞清楚的时候就不断地谈论自己的麻烦，从而将自己置于焦虑之中。
+
+……现在，我的同事们很少向我反映问题了。为什么呢？因为他们发现，在新的反映问题的要求得到执行时，他们要反映的问题多数在整理材料时就已经找到了解决方法。
+
+我刚开始推销保险的时候，对这份工作充满了热情和专注。后来在工作中发生了一些事，使我感到非常气馁，以至于开始看不起这份工作，并考虑要放弃这个职业。我想，如果不是那个星期六的早晨，我坐下来尝试去找出自己忧虑的根源，然后调整了心态的话，我就已经放弃了。
+
+我是这样调整心态的。
+
+我首先问自己，问题到底是什么？问题是我并没有从消耗了自己大量时间的电话当中获得相应的回报率……
+
+我问自己：有什么可行的解决方法？回答之前，我必须得先了解一下这些问题所处的境况，这样我要重新审视一下过去的工作日志，这时我吃惊地发现……我几乎一半的工作时间只换来了7%的销售业绩。
+
+结果是什么？结果其实很明显，我立刻停止了第二次以后的拜访，而将空出的时间用于寻找新的顾客。在很短的时间内，我就使每次拜访获得的收益提高了将近一倍。
+
+你也可以将这些问题运用到你自己的工作问题中，再一次重申自己提出的挑战——它们真的可以使你的忧虑减少50%。而对此，你要做的只是提出：问题是什么？问题的成因是什么？可能解决问题的方法有哪些？你建议使用哪一种方法？
+
+## 3如何消除忧虑
+
+### 3-1把忧虑从内心中驱赶出来
+
+……这也是丘吉尔在每天工作的时间长达18个小时的时候所说的，当有人问他是否在为沉重的责任而忧虑时，他的回答是：“我忙得根本没时间忧虑。”
+
+著名的科学家巴斯特曾经说过：“图书馆以及实验室可以让我们感到平静。”为什么在那里可以让我们感到平静呢？因为人们在图书馆以及实验室的时候，大多都会忙于自己的工作，根本没有担忧的时间。所以，做研究工作的人几乎不会感到精神崩溃，因为他们的时间不允许他们去“享受”这么奢侈的东西。
+
+那么，“保持忙碌”为什么会消除忧虑呢？从心理学的角度来看，有这么一个最基本的定理：不管一个人多么聪明，都无法同时去思考一件以上的事情。
+
+很快你就能得出结论：你只能轮流地想每一件事，并不能在同一时间思考两件事情，不是吗？从情感上来说，也是这样。我们在认真地做着使人高兴的事情的同时，不可能还会受到忧虑的牵绊。一种感觉总是会被另一种感觉挤出去，就是这样简单的发现，使军队的心理治疗专家们在战争时期创造了伟大的奇迹。
+
+当人们的大脑空出来的时候，立刻就会有东西补充进去。这些东西是什么呢？当然，大多数情况下，都会是你的感觉。这是什么原理呢？因为我们的各种情绪都被思想控制着，比如说忧虑、恐惧、憎恨、忌妒以及羡慕等，这些情绪极其猛烈，它们很快就会让我们大脑中全部的平静和快乐的情绪都消失。
+
+你最容易受到忧虑伤害的时候，并不是在你一天忙碌的工作中，而是在你的工作做完之后。因为那个时候，是你的思想最为混乱的时候，那个时候最容易使人胡思乱想，甚至会将你之前犯过的一个小错误都加以夸大。……最好的方法就是不要让自己闲下来，尽量多去做一些有意义的事情。
+
+……本来试图通过做家务让自己忙碌起来，但是经过尝试，效果并不理想。最主要的原因是，当我在做家务的时候，完全不需要用心去思考，大多都是机械式的。……后来我意识到，如果想让自己在一整天里都能感到身心忙碌，只有开展新的工作才能发挥作用。
+
+不要让自己在绝望中挣扎，要让自己沉浸在工作中。如果我们只是一味地在那里不停地发愁、伤心，而不能想方设法使自己忙起来的话，肯定会有接二连三的烦恼向我们扑来，达尔文将这样的行为称为“胡思乱想”。它们会让我们的思想更加空虚，摧毁我们的行动力和意志力。紧张忙碌是最好的良药，当然，也是最实惠有效的一种药。
+
+假如没有事情可做的话，生活就会失去方向，自己也就会随之失去理性，最终会使人的精神崩溃。
+
+工作可以带来无穷的力量和勇气，就像爱默生说的“依靠自己”。
+
+萧伯纳曾经说过的一句话特别有道理，他说：“很多人之所以过得不快乐，是因为他们实在是太闲了，他们有太多的时间去思考自己是不是幸福。”实际上，很多东西真的没有必要过多地考虑，尽可能让自己忙碌起来，血液也会因此加速循环，思路就会更加清晰。
+
+因此，让自己不再忧虑的第一个原则就是：尽可能使自己忙碌起来。让忙碌把心中的忧虑驱赶出来。
+
+### 3-2不被琐事所困扰
+
+在短暂的人生中，我们不要把时间浪费在一些无关紧要的琐事上面。
+
+有权威人士认为，如果一个家庭生活中产生这些无聊的“小事”，会带来“世界上半数以上的伤心的事情”。很少有人天性就是残忍的，追查到底，会发现人们总是因为自尊心或者虚荣心受到一点小伤害就酿成人生悲剧。
+
+一个人如果希望求得心里平静，是不值得为一些小事而烦恼的。
+
+……不去为琐事毁掉一段快乐的时光是多么明智的选择！
+
+如果你有同样的疑问，那就试着把看法和重点转移一下吧，对同一件事情，让自己能有一个新的、开心一点的看法。
+
+生活中很多使我们感觉颓丧的小烦恼，其实，只不过是我们在心中夸大了它们的重要性。
+
+……可是琐事很快就会被遗忘，所以为了这些琐事去浪费时间实在是不明智。我们应该去做值得做的事情，比如去体验真挚的情感，去做应该做的事情。
+
+所以，消除忧虑习惯的一项原则是：莫要被生活中的琐碎的小事所困扰。
+
+### 3-3战胜忧虑的几个法则
+
+一切的忧虑与哀伤，几乎都源于人们的想象，而并非真实存在。
+
+生活就在忧虑中这么过去了，长大后的我逐渐发现，那些令自己害怕的事情，大多都是庸人自扰，百分之九十九是根本不会出现的。
+
+所以，消除忧虑的另一项重要原则是：翻看记录或者是回忆过往，好好问自己：按照概率来算，我正在忧虑的事情真的会发生吗？
+
+### 3-4勇敢面对事实
+
+……因为担心又能怎样呢？还不如坦然接受现实。
+
+在我们漫长的人生中，多少会遇到一些不愉快甚至不幸的事情，既然它们已经是那样了，就不会是再是其他的样子了。在面对这些事情的时候，我们是可以做出抉择的，把它们当作一种无法避免的实际情况，接受并去适应它，否则，忧虑就会毁掉我们的一生，最终将我们弄得疲惫和崩溃。
+
+必须学会去承受那些不可避免的现实。其实这一点也是我们所有人迟早要去学会的，做到这一点很不容易。
+
+不要为月亮而哭泣，也不要为什么事而感到后悔。
+
+决定我们是否快乐的并非生活本身，我们对周围环境的态度才最终决定了我们的感受。
+
+一定要像树木或者动物那样去独自面对风雨和黑暗，去面对饥饿、意外和挫折。
+
+我的意思并不是要在困难面前低声下气，而是在发现事情已经不会再有转机的时候，我们要保持冷静，不要再自找麻烦。不管发生什么，只要还有挽救的机会，我们就要努力下去，而非发怒、忧虑和自暴自弃。
+
+如果有一天，我真的赔光了所有的钱，我也不会为此忧虑，因为忧虑也不可能改变什么。我能做的，就是尽力做好应该做的，至于结果如何，那是上帝的事情。
+
+我从来不担心将来的事情，因为谁都不知道以后会发生什么，担心未知是没有用的。遇到棘手的问题时，如果我能想到方法解决，那就去解决；如果想不到，那就干脆忘记有这回事。……不要为无法达到的事情而感到忧虑。
+
+人不可能有足够的感情和精力去一边抗拒无法避免的现实，一边创造新的生活。所以我们要么学会低下头，要么只能因为抵抗而被摧残。……你要像柳条那样柔韧，不要像橡树那样坚挺。
+
+面对人生的种种坎坷，如果我们学不会顺应，而只是一味地抗拒，退缩到自己所幻想的世界里，结果只会被搞得心力交瘁，继而变得忧虑、烦躁、紧张，甚至会崩溃。
+
+乞求上帝赐予我心境的波澜不惊，使我拥有好心态去接受那无法更改的万事；并给予足够的勇气，让我去改变那可以改变的事情；再赐予我充沛的智慧，去将这两者之间的细微差别进行区分。
+
+如果想知道你到底是一个什么样的人，只需要了解你到底在想些什么就可以了。如果我们总是在想些悲伤的事情，那么内心肯定就有悲伤；如果我们总是担心会失败，那么很有可能就真的会失败；……如果我们总是自怜，最终所有人都会努力避开我们。
+
+思想决定生活。所以现在我很清楚我们必须要面对的最重要的问题，就是如何进行正确的思想。只有正确的思想，才能够让所有的问题都迎刃而解。
+
+我们难以用乐天的态度去面对生活中所有的困难，但是至少希望大家都能用正面而不是反面的态度去面对生活。换句话说，当问题出现时，我们当然要重视，但是不是去忧虑。忧虑和重视有什么区别呢？这么说吧，每当在纽约市的拥挤街道间穿行的时候，我都会对眼下的安全问题很重视，但是我不会产生忧虑。
+
+想要关心问题，就要先了解问题的所在，接着再想办法去解决。而忧虑的后果，只能是让人发了疯似的在原地转圈。
+
+所以，消除忧虑习惯的一项原则是：勇于面对那些不可避免的事实。
+
+### 3-5让忧虑到此为止
+
+无论是现在，还是将来的事物，都是用我们的生命换来的。
+
+……也许是我比较迟钝，在私人恩怨上，我反而不如你们感觉得多。但是我一直认为，一个人用半生的时间去与别人争执，是很不值得的。如果那个人停止对我的挑衅，我就会当做什么都没发生过。
+
+因此，当我们的生活中出现不好的情况时，在事情变得更加糟糕之前，在我们为此付出巨大的代价之前，请先问自己几个问题：遇到的这个问题和我有多大的关系，值得如此担忧吗？我如何为这件事设置一个底线，然后将他忘掉？这只“哨子”到底值多少钱？我是不是已经多付了钱？
+
+### 3-6不要去做锯木屑那样的傻事
+
+我们可以想办法改变当时发生的事情所产生的影响，但是我们不可能去改变当时所发生的事情本身。
+
+事实上，唯一可以让犯过的错误变得有价值的方法，就是平静地分析我们过去的错误，并从中获取到教训，而不是牢记它们。
+
+当然，你们不可能锯木屑，因为那些都是已经锯下来的。过去的事也是一样。当你开始为那些已经做完和过去的事情而感到忧虑的时候，你不过是在做一些锯木屑一般的傻事罢了。
+
+……怎么做呢？只是一再地对自己说：“我不为自己由辉煌到惨淡而感到忧虑”吗？不！这样做只会再强迫自己想到过去的那些忧虑。真正理性的做法是承受一切，然后忘记失败，集中精力为未来做规划。
+
+聪明的人永远不会坐在那里为他们的损失而悲伤，却会很高兴地想办法来弥补他们的损伤。
+
+不要再去做锯木屑的傻事，不要为打翻了的牛奶而哭泣。
 
