Math：尝试更改公式语法，以适应 github 的要求

--- a/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
+++ b/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
@@ -14,31 +14,31 @@
 
 ## 等价关系推导
 
-这里参考博客[^3]，给出基于 KL 散度的的 JS 散度的定义如 \( (\ref{eq1}) \) 式所示。
+这里参考博客[^3]，给出基于 KL 散度的的 JS 散度的定义如 $` (\ref{eq1}) `$ 式所示。
 
-\( \begin{equation} \label{eq1}\tag{1} JSD(P_1||P_2) = \frac{1}{2} KL(P_1||M) + \frac{1}{2} KL(P_2||M) \end{equation} \) 
+$` \begin{equation} \label{eq1}\tag{1} JSD(P_1||P_2) = \frac{1}{2} KL(P_1||M) + \frac{1}{2} KL(P_2||M) \end{equation} `$ 
 
-其中，\( P_1 \) 、\( P_2 \) 分别表示两个不同的概率分布，\( M= \frac{P_1(x) + P_2(x)}{2} \) 是两个概率分布的平均值，\(  KL(A||B)  \) 值 KL 散度，其公式如 \( (\ref{eq2}) \) 式、\( (\ref{eq3}) \) 式所示。
+其中，$` P_1 `$ 、$` P_2 `$ 分别表示两个不同的概率分布，$` M= \frac{P_1(x) + P_2(x)}{2} `$ 是两个概率分布的平均值，$`  KL(A||B)  `$ 值 KL 散度，其公式如 $` (\ref{eq2}) `$ 式、$` (\ref{eq3}) `$ 式所示。
 
-\( \begin{equation} \label{eq2}\tag{2} KL(P_1||P_2) = \sum_{x} p_1(x)\frac{p_1(x)}{p_2(x)} \end{equation} \) 
+$` \begin{equation} \label{eq2}\tag{2} KL(P_1||P_2) = \sum_{x} p_1(x)\frac{p_1(x)}{p_2(x)} \end{equation} `$ 
 
-\( \begin{equation} \label{eq3}\tag{3} KL(P_2||P_1) = \sum_{x} p_2(x)\frac{p_2(x)}{p_1(x)} \end{equation} \) 
+$` \begin{equation} \label{eq3}\tag{3} KL(P_2||P_1) = \sum_{x} p_2(x)\frac{p_2(x)}{p_1(x)} \end{equation} `$ 
 
 *BTW，KL 散度是不具备对称性的，这也是 JS 散度对它做出的改进方向。*
 
-而论文[^2]中使用的 JS 散度的表达式如 \( (\ref{eq4}) \) 式所示。
+而论文[^2]中使用的 JS 散度的表达式如 $` (\ref{eq4}) `$ 式所示。
 
-\( \begin{equation} \label{eq4}\tag{4} JSD(P_1||P_2) = H(\frac{1}{2}(p_1(x)+p_2(x))) - \frac{1}{2}(H(p_1(x))+H(p_2(x))) \end{equation} \) 
+$` \begin{equation} \label{eq4}\tag{4} JSD(P_1||P_2) = H(\frac{1}{2}(p_1(x)+p_2(x))) - \frac{1}{2}(H(p_1(x))+H(p_2(x))) \end{equation} `$ 
 
 其中
 
-\( \begin{equation} \label{eq5}\tag{5} H(p(x)) = -\sum_{x} p(x)logp(x) \end{equation}\)
+$` \begin{equation} \label{eq5}\tag{5} H(p(x)) = -\sum_{x} p(x)logp(x) \end{equation}`$
 
-表示随机变量 \( X \) 的熵（自信息的期望值）。
+表示随机变量 $` X `$ 的熵（自信息的期望值）。
 
-乍一看，这两个公式在形式上好像很不一样。但是如果我们进行如下的推导，就能发现 \( (\ref{eq1}) \) 式和\( (\ref{eq4}) \) 式其实是**等价**的。
+乍一看，这两个公式在形式上好像很不一样。但是如果我们进行如下的推导，就能发现 $` (\ref{eq1}) `$ 式和$` (\ref{eq4}) `$ 式其实是**等价**的。
 
-我们将 KL 散度的公式 \( (\ref{eq2}) \) 、\( (\ref{eq3}) \) 带入到 \( (\ref{eq1}) \) 式中：
+我们将 KL 散度的公式 $` (\ref{eq2}) `$ 、$` (\ref{eq3}) `$ 带入到 $` (\ref{eq1}) `$ 式中：
 
 $$
 \begin{align}
@@ -73,13 +73,13 @@ $$
 \end{align}
 $$
 
-这样我们便完成了从而完成了\( (\ref{eq1}) \) 与 \( (\ref{eq4}) \) 相等的证明。这种 **拆分-合并相似项** 的形式通常可以化简公式、简化计算。
+这样我们便完成了从而完成了 $` (\ref{eq1}) `$ 与 $` (\ref{eq4}) `$ 相等的证明。这种 **拆分-合并相似项** 的形式通常可以化简公式、简化计算。
 
 ## 题外话
 
 博客[^3]对 JS 散度的缺陷（当两个分布完全不重叠时，不管两个分布的中心距离有多近，其 JS 散度值都是一个常数，以至于其梯度为0）进行了推导，这次的推导整理也受到这篇博客的启发。对此有疑惑的同学可以去围观下～
 
-在博客的证明过程中，可以把 \(log2\) 取出来是因为概率密度的性质： \( \sum p_1(x) = 1, \sum p_2(x) = 1\)，从而：
+在博客的证明过程中，可以把 $`log2`$ 取出来是因为概率密度的性质： $` \sum p_1(x) = 1, \sum p_2(x) = 1`$，从而：
 
 $$
 \begin{equation}
