Math：修改inline公式的引用格式，尝试适配 github 配置

--- a/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
+++ b/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
@@ -14,11 +14,11 @@
 
 ## 等价关系推导
 
-这里参考博客[^3]，给出基于 KL 散度的的 JS 散度的定义如 $` (\ref{eq1}) `$ 式所示。
+这里参考博客[^3]，给出基于 KL 散度的的 JS 散度的定义如 ([1](#mjx-eqn-eq1)) 式所示。
 
 $` \begin{equation} \label{eq1}\tag{1} JSD(P_1||P_2) = \frac{1}{2} KL(P_1||M) + \frac{1}{2} KL(P_2||M) \end{equation} `$ 
 
-其中，$` P_1 `$ 、$` P_2 `$ 分别表示两个不同的概率分布，$` M= \frac{P_1(x) + P_2(x)}{2} `$ 是两个概率分布的平均值，$`  KL(A||B)  `$ 值 KL 散度，其公式如 $` (\ref{eq2}) `$ 式、$` (\ref{eq3}) `$ 式所示。
+其中，$` P_1 `$ 、$` P_2 `$ 分别表示两个不同的概率分布，$` M= \frac{P_1(x) + P_2(x)}{2} `$ 是两个概率分布的平均值，$`  KL(A||B)  `$ 值 KL 散度，其公式如 ([2](#mjx-eqn-eq2)) 式、([3](#mjx-eqn-eq3)) 式所示。
 
 $` \begin{equation} \label{eq2}\tag{2} KL(P_1||P_2) = \sum_{x} p_1(x)\frac{p_1(x)}{p_2(x)} \end{equation} `$ 
 
@@ -26,7 +26,7 @@ $` \begin{equation} \label{eq3}\tag{3} KL(P_2||P_1) = \sum_{x} p_2(x)\frac{p_2(x
 
 *BTW，KL 散度是不具备对称性的，这也是 JS 散度对它做出的改进方向。*
 
-而论文[^2]中使用的 JS 散度的表达式如 $` (\ref{eq4}) `$ 式所示。
+而论文[^2]中使用的 JS 散度的表达式如 ([4](#mjx-eqn-eq4)) 式所示。
 
 $` \begin{equation} \label{eq4}\tag{4} JSD(P_1||P_2) = H(\frac{1}{2}(p_1(x)+p_2(x))) - \frac{1}{2}(H(p_1(x))+H(p_2(x))) \end{equation} `$ 
 
@@ -36,9 +36,9 @@ $` \begin{equation} \label{eq5}\tag{5} H(p(x)) = -\sum_{x} p(x)logp(x) \end{equa
 
 表示随机变量 $` X `$ 的熵（自信息的期望值）。
 
-乍一看，这两个公式在形式上好像很不一样。但是如果我们进行如下的推导，就能发现 $` (\ref{eq1}) `$ 式和$` (\ref{eq4}) `$ 式其实是**等价**的。
+乍一看，这两个公式在形式上好像很不一样。但是如果我们进行如下的推导，就能发现 ([1](#mjx-eqn-eq1)) 式和 ([4](#mjx-eqn-eq4)) 式其实是**等价**的。
 
-我们将 KL 散度的公式 $` (\ref{eq2}) `$ 、$` (\ref{eq3}) `$ 带入到 $` (\ref{eq1}) `$ 式中：
+我们将 KL 散度的公式 ([2](#mjx-eqn-eq2)) 、([3](#mjx-eqn-eq3)) 带入到 ([1](#mjx-eqn-eq1)) 式中：
 
 $$
 \begin{align}
@@ -73,7 +73,7 @@ $$
 \end{align}
 $$
 
-这样我们便完成了从而完成了 $` (\ref{eq1}) `$ 与 $` (\ref{eq4}) `$ 相等的证明。这种 **拆分-合并相似项** 的形式通常可以化简公式、简化计算。
+这样我们便完成了从而完成了 ([1](#mjx-eqn-eq1)) 式与 ([4](#mjx-eqn-eq4)) 式相等的证明。这种 **拆分-合并相似项** 的形式通常可以化简公式、简化计算。
 
 ## 题外话
 
