Mathematics: 订正 KL散度公式错误。

--- a/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
+++ b/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
@@ -20,9 +20,9 @@ $` \begin{equation} \label{eq1}\tag{1} JSD(P_1||P_2) = \frac{1}{2} KL(P_1||M) + 
 
 其中，$` P_1 `$ 、$` P_2 `$ 分别表示两个不同的概率分布，$` M= \frac{P_1(x) + P_2(x)}{2} `$ 是两个概率分布的平均值，$`  KL(A||B)  `$ 值 KL 散度，其公式如 ([2](#mjx-eqn-eq2)) 式、([3](#mjx-eqn-eq3)) 式所示。
 
-$` \begin{equation} \label{eq2}\tag{2} KL(P_1||P_2) = \sum_{x} p_1(x)\frac{p_1(x)}{p_2(x)} \end{equation} `$ 
+$` \begin{equation} \label{eq2}\tag{2} KL(P_1||P_2) = \sum_{x} p_1(x)log\frac{p_1(x)}{p_2(x)} \end{equation} `$ 
 
-$` \begin{equation} \label{eq3}\tag{3} KL(P_2||P_1) = \sum_{x} p_2(x)\frac{p_2(x)}{p_1(x)} \end{equation} `$ 
+$` \begin{equation} \label{eq3}\tag{3} KL(P_2||P_1) = \sum_{x} p_2(x)log\frac{p_2(x)}{p_1(x)} \end{equation} `$ 
 
 *BTW，KL 散度是不具备对称性的，这也是 JS 散度对它做出的改进方向。*
 
