--- a/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
+++ b/Mathematics/ProbabilityAndStatistics/2023-10-23-JS散度的两种书写方式.md
@@ -91,6 +91,7 @@ C &= \frac{1}{2} \sum_{x}p_1(x)log2 + \frac{1}{2} \sum_{x}p_2(x)log2 \\
 \end{equation}
 $$
 
+另外，**KL 散度的值是大于等于零的**，这个特性在使用 KL 散度推导不等式或者函数的上下界时很有用。不过直接看公式是看不出来的，需要严格的证明。StackOverflow上有一篇不错的回答[^6]，使用了数种不同的证明方法，可以去看一下。
 
 [^1]: YANG X, SONG Z, KING I, et al. A survey on deep semi-supervised learning[J]. IEEE Transactions on Knowledge and Data Engineering, 2022.
 
@@ -101,4 +102,6 @@ $$
 [^4]: 交叉熵、相对熵（KL散度）、JS散度和Wasserstein距离（推土机距离）[EB/OL]//知乎专栏. [2023-10-23]. https://zhuanlan.zhihu.com/p/74075915.
 
 [^5]: 邱锡鹏. 神经网络与深度学习[M/OL]. 北京: 机械工业出版社, 2020. https://nndl.github.io/.
+
+[^6]: G A. Answer to “Why KL divergence is non-negative?”[EB/OL]//Cross Validated. (2018-03-18)[2023-11-15]. https://stats.stackexchange.com/a/335201/372681.
 
