Linux: 添加脚本的详细使用流程。

--- a/Linux/ShellScript/2023-12-27-编写同步工作站和本机Git仓库的Shell脚本.md
+++ b/Linux/ShellScript/2023-12-27-编写同步工作站和本机Git仓库的Shell脚本.md
@@ -84,6 +84,8 @@ exit 0
 
 ![linux_shell_sync_2](../../images/linux_shell_sync_2.png)
 
+在需要将工作站上的代码仓库与云端仓库进行同步时，首先使用该脚本的 `--pull` 选项，将工作站上的代码仓库拉取到本机；然后在本机上使用 `VSCode` 、 `Git` 以及科学工具完成同步操作；最后再使用脚本的 `--push` 选项将同步状态更新到工作站的代码库中。
+
 ## 尾声
 
 暂时先写到这里，有关 `rsync` 命令的详细讲解等到有空的时候再写吧～
