English: 更新 推荐欧路词典

--- a/English/2023-7-18-MDict词典软件的安装和使用方法.md
+++ b/English/2023-7-18-MDict词典软件的安装和使用方法.md
@@ -167,3 +167,17 @@
 
 使用时注意一下就好了，一般很容易就可以识别出来，瑕不掩瑜。
 
+---
+
+**2024-2-15 更新**：我在去年下半年发现 [欧路词典](https://www.eudic.net/v4/en/app/eudic) 也有本地词典导入的功能，并且比 MDict 好用多了。
+
+它有如下优势：
+
+- 全平台支持，Linux、IOS 是没问题的
+- 深色模式（需要 VIP）
+- 内置背单词功能，单词的导入导出很方便，学习的时候可以直接看导入的词条。但是学习记录的多端同步需要 VIP。
+
+下面放一张欧路词典的学习截图。
+
+![欧路词典的学习截图](../images/eudic_voc.png)
+
